--- a/roles/mikeandwan_us/templates/admin_scripts/wwwsql.sh.j2
+++ b/roles/mikeandwan_us/templates/admin_scripts/wwwsql.sh.j2
@@ -1,2 +1,2 @@
 #!/bin/bash
-podman run -it --rm --pod {{ mawus_podname }} --env-file {{ env_file_dir }}/maw-postgres-backup.env postgres:{{ postgres_version }} psql -h localhost -U postgres -d maw_website
+podman run -it --rm --pod {{ mawus_podname }} --env-file {{ env_file_dir }}/maw-postgres.env postgres:{{ postgres_version }} psql -h localhost -U postgres -d maw_website
