--- a/roles/mikeandwan_us/templates/maw_env/maw-postgres.env.j2
+++ b/roles/mikeandwan_us/templates/maw_env/maw-postgres.env.j2
@@ -1,5 +1,5 @@
 # set the postgres password when initializing the container w/ blank db
-POSTGRES_PASSWORD={{ mawus_config.sql_postgress_password }}
+POSTGRES_PASSWORD={{ mawus_config.sql_postgres_password }}
 
 # set the pwd for use in client tooling
-PGPASSWORD={{ mawus_config.sql_postgress_password }}
+PGPASSWORD={{ mawus_config.sql_postgres_password }}
