configure postgres to require scram-sha-256

--- a/roles/mikeandwan_us/templates/maw_env/maw-postgres.env.j2
+++ b/roles/mikeandwan_us/templates/maw_env/maw-postgres.env.j2
@@ -3,3 +3,6 @@ POSTGRES_PASSWORD={{ mawus_config.sql_postgres_password }}
 
 # set the pwd for use in client tooling
 PGPASSWORD={{ mawus_config.sql_postgres_password }}
+
+# set the catchall host method in pg_hba.conf (used when first creating container/config)
+POSTGRES_HOST_AUTH_METHOD=scram-sha-256
