always prepare env files and make more dynamic per env

--- a/roles/mikeandwan_us/templates/maw_env/maw-auth.env.j2
+++ b/roles/mikeandwan_us/templates/maw_env/maw-auth.env.j2
@@ -1,14 +1,14 @@
-ASPNETCORE_ENVIRONMENT=production
+ASPNETCORE_ENVIRONMENT={% if mawus_config.env == 'prod' %}production{% else %}development{% endif %}
 
 MAW_AUTH_DataProtection__Path=/dataprotection
 
 MAW_AUTH_Environment__DbConnectionString=Server=127.0.0.1;Port=5432;Database=maw_website;Max Auto Prepare=100;User Id={{ mawus_config.sql_username }};Password={{ mawus_config.sql_password }}
 MAW_AUTH_Environment__IdsrvDbConnectionString=Server=127.0.0.1;Port=5432;Database=idsrv;Max Auto Prepare=100;User Id={{ mawus_config.sql_username }};Password={{ mawus_config.sql_password }}
-MAW_AUTH_Environment__AuthUrl=https://auth.mikeandwan.us
-MAW_AUTH_Environment__WwwUrl=https://www.mikeandwan.us
-MAW_AUTH_Environment__PhotosUrl=https://photos.mikeandwan.us
-MAW_AUTH_Environment__FilesUrl=https://files.mikeandwan.us
-MAW_AUTH_Environment__WwwClientSecret={{ mawus_config.www_client_secret }}
+MAW_AUTH_Environment__AuthUrl=https://{{ mawus_config.fqdn_auth }}
+MAW_AUTH_Environment__WwwUrl=https://{{ mawus_config.fqdn_www }}
+MAW_AUTH_Environment__PhotosUrl=https://{{ mawus_config.fqdn_photos }}
+MAW_AUTH_Environment__FilesUrl=https://{{ mawus_config.fqdn_files }}
+MAW_AUTH_Environment__WwwClientSecret={{ mawus_config.www_auth_client_secret }}
 
 MAW_AUTH_Gmail__ApplicationName=mikeandwan.us
 MAW_AUTH_Gmail__FromEmailAddress=webmaster@mikeandwan.us
@@ -25,7 +25,7 @@ MAW_AUTH_Microsoft__Secret={{ mawus_config.microsoft_client_secret }}
 MAW_AUTH_GitHub__ClientId={{ mawus_config.github_client_id }}
 MAW_AUTH_GitHub__ClientSecret={{ mawus_config.github_client_secret }}
 
-MAW_AUTH_KestrelPfxFile=/certs/internal/auth/auth.pfx
-MAW_AUTH_SigningCertDir=/certs/internal/signing
+MAW_AUTH_KestrelPfxFile=/maw-certs/auth/auth.pfx
+MAW_AUTH_SigningCertDir=/maw-certs/signing
 
 GOOGLE_APPLICATION_CREDENTIALS=/google-creds/www_emailer.json
