--- a/roles/mikeandwan_us/templates/maw_env/maw-api.env.j2
+++ b/roles/mikeandwan_us/templates/maw_env/maw-api.env.j2
@@ -1,6 +1,6 @@
-ASPNETCORE_ENVIRONMENT=production
+ASPNETCORE_ENVIRONMENT={% if mawus_config.env == 'prod' %}production{% else %}development{% endif %}
 
-MAW_API_KestrelPfxFile=/certs/internal/api/api.pfx
+MAW_API_KestrelPfxFile=/maw-certs/api/api.pfx
 
 MAW_API_DataProtection__Path=/dataprotection
 
@@ -10,12 +10,12 @@ MAW_API_FileUpload__RootDirectory=/maw-uploads
 
 MAW_API_Search__CoreUrl=http://localhost:8983/solr/multimedia-categories
 
-MAW_API_UrlConfig__Api=https://api.mikeandwan.us
-MAW_API_UrlConfig__Auth=https://auth.mikeandwan.us
-MAW_API_UrlConfig__Www=https://www.mikeandwan.us
-MAW_API_UrlConfig__Photos=https://photos.mikeandwan.us
-MAW_API_UrlConfig__Files=https://files.mikeandwan.us
+MAW_API_UrlConfig__Api=https://{{ mawus_config.fqdn_api }}
+MAW_API_UrlConfig__Auth=https://{{ mawus_config.fqdn_auth }}
+MAW_API_UrlConfig__Www=https://{{ mawus_config.fqdn_www }}
+MAW_API_UrlConfig__Photos=https://{{ mawus_config.fqdn_photos }}
+MAW_API_UrlConfig__Files=https://{{ mawus_config.fqdn_files }}
 
 # still needed?
-MAW_API_AuthConfig__AuthorizationUrl=https://auth.mikeandwan.us
-MAW_API_CorsConfig__SiteUrl=https://www.mikeandwan.us
+MAW_API_AuthConfig__AuthorizationUrl=https://{{ mawus_config.fqdn_auth }}
+MAW_API_CorsConfig__SiteUrl=https://{{ mawus_config.fqdn_www }}
