additional env file tweaks

--- a/roles/mikeandwan_us/templates/maw_env/maw-api.env.j2
+++ b/roles/mikeandwan_us/templates/maw_env/maw-api.env.j2
@@ -1,21 +1,18 @@
 ASPNETCORE_ENVIRONMENT={% if mawus_config.env == 'prod' %}production{% else %}development{% endif %}
 
-MAW_API_KestrelPfxFile=/maw-certs/api/api.pfx
+MAW_API_KestrelPfxFile={{ mawus_config.pfx_api }}
 
 MAW_API_DataProtection__Path=/dataprotection
 
 MAW_API_Environment__DbConnectionString=Server=127.0.0.1;Port=5432;Database=maw_website;Max Auto Prepare=100;User Id={{ mawus_config.sql_username }};Password={{ mawus_config.sql_password }}
+MAW_API_Environment__RedisConnectionString='localhost,abortConnect=false'
 
-MAW_API_FileUpload__RootDirectory=/maw-uploads
+MAW_API_FileUpload__RootDirectory={{ mawus_config.upload_dir }}
 
 MAW_API_Search__CoreUrl=http://localhost:8983/solr/multimedia-categories
 
-MAW_API_UrlConfig__Api=https://{{ mawus_config.fqdn_api }}
-MAW_API_UrlConfig__Auth=https://{{ mawus_config.fqdn_auth }}
-MAW_API_UrlConfig__Www=https://{{ mawus_config.fqdn_www }}
-MAW_API_UrlConfig__Photos=https://{{ mawus_config.fqdn_photos }}
-MAW_API_UrlConfig__Files=https://{{ mawus_config.fqdn_files }}
-
-# still needed?
-MAW_API_AuthConfig__AuthorizationUrl=https://{{ mawus_config.fqdn_auth }}
-MAW_API_CorsConfig__SiteUrl=https://{{ mawus_config.fqdn_www }}
+MAW_API_UrlConfig__Api={{ mawus_config.url_api }}
+MAW_API_UrlConfig__Auth={{ mawus_config.url_auth }}
+MAW_API_UrlConfig__Www={{ mawus_config.url_www }}
+MAW_API_UrlConfig__Photos={{ mawus_config.url_photos }}
+MAW_API_UrlConfig__Files={{ mawus_config.url_files }}
