--- a/roles/mikeandwan_us/templates/maw_env/maw-www.env.j2
+++ b/roles/mikeandwan_us/templates/maw_env/maw-www.env.j2
@@ -1,8 +1,9 @@
 ASPNETCORE_ENVIRONMENT={% if mawus_config.env == 'prod' %}production{% else %}development{% endif %}
 
-MAW_WWW_KestrelPfxFile=/maw-certs/www/www.pfx
+MAW_WWW_KestrelPfxFile={{ mawus_config.pfx_www }}
 
 MAW_WWW_Environment__DbConnectionString=Server=127.0.0.1;Port=5432;Database=maw_website;Max Auto Prepare=100;User Id={{ mawus_config.sql_username }};Password={{ mawus_config.sql_password }}
+MAW_WWW_Environment__RedisConnectionString='localhost,abortConnect=false'
 
 MAW_WWW_AuthConfig__AuthorizationUrl=https://{{ mawus_config.fqdn_auth }}
 MAW_WWW_AuthConfig__ClientId={{ mawus_config.www_auth_client_id }}
@@ -16,10 +17,10 @@ MAW_WWW_Gmail__FromEmailAddress=webmaster@mikeandwan.us
 MAW_WWW_GoogleRecaptcha__SiteKey={{ mawus_config.google_recaptcha_site_key }}
 MAW_WWW_GoogleRecaptcha__SecretKey={{ mawus_config.google_recaptcha_secret_key }}
 
-MAW_WWW_UrlConfig__Api=https://{{ mawus_config.fqdn_api }}
-MAW_WWW_UrlConfig__Auth=https://{{ mawus_config.fqdn_auth }}
-MAW_WWW_UrlConfig__Www=https://{{ mawus_config.fqdn_www }}
-MAW_WWW_UrlConfig__Files=https://{{ mawus_config.fqdn_files }}
-MAW_WWW_UrlConfig__Photos=https://{{ mawus_config.fqdn_photos }}
+MAW_WWW_UrlConfig__Api={{ mawus_config.url_api }}
+MAW_WWW_UrlConfig__Auth={{ mawus_config.url_auth }}
+MAW_WWW_UrlConfig__Www={{ mawus_config.url_www }}
+MAW_WWW_UrlConfig__Files={{ mawus_config.url_files }}
+MAW_WWW_UrlConfig__Photos={{ mawus_config.url_photos }}
 
 GOOGLE_APPLICATION_CREDENTIALS=/google-creds/www_emailer.json
