--- a/roles/mikeandwan_us/templates/maw_env/maw-api.env.j2
+++ b/roles/mikeandwan_us/templates/maw_env/maw-api.env.j2
@@ -5,7 +5,7 @@ MAW_API_KestrelPfxFile={{ mawus_config.pfx_api }}
 MAW_API_DataProtection__Path=/dataprotection
 
 MAW_API_Environment__DbConnectionString=Server=127.0.0.1;Port=5432;Database=maw_website;Max Auto Prepare=100;User Id={{ mawus_config.sql_username }};Password={{ mawus_config.sql_password }}
-MAW_API_Environment__RedisConnectionString='localhost,abortConnect=false'
+MAW_API_Environment__RedisConnectionString=localhost,abortConnect=false
 
 MAW_API_FileUpload__RootDirectory={{ mawus_config.upload_dir }}
 
