--- a/roles/mikeandwan_us/templates/maw_env/maw-www.env.j2
+++ b/roles/mikeandwan_us/templates/maw_env/maw-www.env.j2
@@ -3,7 +3,7 @@ ASPNETCORE_ENVIRONMENT={% if mawus_config.env == 'prod' %}production{% else %}de
 MAW_WWW_KestrelPfxFile={{ mawus_config.pfx_www }}
 
 MAW_WWW_Environment__DbConnectionString=Server=127.0.0.1;Port=5432;Database=maw_website;Max Auto Prepare=100;User Id={{ mawus_config.sql_username }};Password={{ mawus_config.sql_password }}
-MAW_WWW_Environment__RedisConnectionString='localhost,abortConnect=false'
+MAW_WWW_Environment__RedisConnectionString=localhost,abortConnect=false
 
 MAW_WWW_AuthConfig__AuthorizationUrl=https://{{ mawus_config.fqdn_auth }}
 MAW_WWW_AuthConfig__ClientId={{ mawus_config.www_auth_client_id }}
