--- a/roles/mikeandwan_us/templates/maw_env/maw-www.env.j2
+++ b/roles/mikeandwan_us/templates/maw_env/maw-www.env.j2
@@ -9,7 +9,7 @@ MAW_WWW_AuthConfig__AuthorizationUrl=https://{{ mawus_config.fqdn_auth }}
 MAW_WWW_AuthConfig__ClientId={{ mawus_config.www_auth_client_id }}
 MAW_WWW_AuthConfig__Secret={{ mawus_config.www_auth_client_secret }}
 
-MAW_WWW_DataProtection__Path=/dataprotection
+MAW_WWW_DataProtection__Path={% if mawus_config.env == 'local' %}{{ mawus_config.dataprotection_dir }}{% else %}/dataprotection{% endif %}
 
 MAW_WWW_Gmail__ApplicationName=mikeandwan.us
 MAW_WWW_Gmail__FromEmailAddress=webmaster@mikeandwan.us
