correct the signing dir var

--- a/roles/mikeandwan_us/templates/maw_env/maw-auth.env.j2
+++ b/roles/mikeandwan_us/templates/maw_env/maw-auth.env.j2
@@ -26,6 +26,6 @@ MAW_AUTH_GitHub__ClientId={{ mawus_config.github_client_id }}
 MAW_AUTH_GitHub__ClientSecret={{ mawus_config.github_client_secret }}
 
 MAW_AUTH_KestrelPfxFile={{ mawus_config.pfx_auth }}
-MAW_AUTH_SigningCertDir={{ mawus_config.pfx_signing }}
+MAW_AUTH_SigningCertDir={{ mawus_config.pfx_signing | dirname }}
 
 GOOGLE_APPLICATION_CREDENTIALS=/google-creds/www_emailer.json
