--- a/roles/mikeandwan_us/templates/maw_env/maw-auth.env.j2
+++ b/roles/mikeandwan_us/templates/maw_env/maw-auth.env.j2
@@ -13,7 +13,7 @@ MAW_AUTH_Environment__WwwClientSecret={{ mawus_config.www_auth_client_secret }}
 MAW_AUTH_Gmail__ApplicationName=mikeandwan.us
 MAW_AUTH_Gmail__FromEmailAddress=webmaster@mikeandwan.us
 
-MAW_AUTH_GooglePlus__ClientId={{ mawus_config.google_plus_client_id }}.apps.googleusercontent.com
+MAW_AUTH_GooglePlus__ClientId={{ mawus_config.google_plus_client_id }}
 MAW_AUTH_GooglePlus__ClientSecret={{ mawus_config.google_plus_client_secret }}
 
 MAW_AUTH_Twitter__ConsumerKey={{ mawus_config.twitter_client_id }}
