dynamically configure the google cred file

--- a/roles/mikeandwan_us/templates/maw_env/maw-auth.env.j2
+++ b/roles/mikeandwan_us/templates/maw_env/maw-auth.env.j2
@@ -28,4 +28,4 @@ MAW_AUTH_GitHub__ClientSecret={{ mawus_config.github_client_secret }}
 MAW_AUTH_KestrelPfxFile={{ mawus_config.pfx_auth }}
 MAW_AUTH_SigningCertDir={{ mawus_config.pfx_signing | dirname }}
 
-GOOGLE_APPLICATION_CREDENTIALS=/google-creds/www_emailer.json
+GOOGLE_APPLICATION_CREDENTIALS={{ mawus_config.google_email_creds_file }}
