--- a/roles/mikeandwan_us/templates/maw_env/maw-www.env.j2
+++ b/roles/mikeandwan_us/templates/maw_env/maw-www.env.j2
@@ -23,4 +23,4 @@ MAW_WWW_UrlConfig__Www={{ mawus_config.url_www }}
 MAW_WWW_UrlConfig__Files={{ mawus_config.url_files }}
 MAW_WWW_UrlConfig__Photos={{ mawus_config.url_photos }}
 
-GOOGLE_APPLICATION_CREDENTIALS=/google-creds/www_emailer.json
+GOOGLE_APPLICATION_CREDENTIALS={{ mawus_config.google_email_creds_file }}
