configure solr-indexer to run in dev and update some template files based on variable name changes

--- a/roles/mikeandwan_us/templates/systemd/reverse-geocode.service.j2
+++ b/roles/mikeandwan_us/templates/systemd/reverse-geocode.service.j2
@@ -3,4 +3,4 @@ Description=Reverse Geocode job for mikeandwan.us
 
 [Service]
 Type=oneshot
-ExecStart=podman run -it --rm --pull always --pod {{ mawus_podname }} --volume {{ reverse_geocode_volume.volume.Name }}:/results:rw,z --env-file {{ env_file_dir }}/maw-reverse-geocode.env docker.io/aerisg222/maw-reverse-geocode:latest
+ExecStart=podman run -it --rm --pull always --pod {{ mawus_config.podman_podname }} --volume {{ reverse_geocode_volume.volume.Name }}:/results:rw,z --env-file {{ mawus_config.podman_env_dir }}/maw-reverse-geocode.env docker.io/aerisg222/maw-reverse-geocode:latest
