remove 'once a day' as that is now configurable

--- a/roles/postgres_backup/templates/postgres_backup.timer.j2
+++ b/roles/postgres_backup/templates/postgres_backup.timer.j2
@@ -1,5 +1,5 @@
 [Unit]
-Description=Run postgres backup for database {{ db_name }} once a day
+Description=Run postgres backup for database {{ db_name }}
 
 [Timer]
 OnCalendar={{ calendar }}
