try to improve structure for mawus to support multiple environments - rename local to dev - break out playbooks / inventories

--- a/roles/mikeandwan_us/templates/maw_env/maw-auth.env.j2
+++ b/roles/mikeandwan_us/templates/maw_env/maw-auth.env.j2
@@ -1,6 +1,6 @@
 ASPNETCORE_ENVIRONMENT={% if mawus_config.env == 'prod' %}production{% else %}development{% endif %}
 
-MAW_AUTH_DataProtection__Path={% if mawus_config.env == 'local' %}{{ mawus_config.dataprotection_dir }}{% else %}/dataprotection{% endif %}
+MAW_AUTH_DataProtection__Path={% if mawus_config.env == 'dev' %}{{ mawus_config.dataprotection_dir }}{% else %}/dataprotection{% endif %}
 
 MAW_AUTH_Environment__DbConnectionString=Server=127.0.0.1;Port=5432;Database=maw_website;Max Auto Prepare=100;User Id={{ mawus_config.sql_username }};Password={{ mawus_config.sql_password }}
 MAW_AUTH_Environment__IdsrvDbConnectionString=Server=127.0.0.1;Port=5432;Database=idsrv;Max Auto Prepare=100;User Id={{ mawus_config.sql_username }};Password={{ mawus_config.sql_password }}
