simplify config to specify aspnet environment

--- a/roles/mikeandwan_us/templates/maw_env/maw-api.env.j2
+++ b/roles/mikeandwan_us/templates/maw_env/maw-api.env.j2
@@ -1,4 +1,4 @@
-ASPNETCORE_ENVIRONMENT={% if mawus_config.env == 'prod' %}production{% else %}development{% endif %}
+ASPNETCORE_ENVIRONMENT={{ mawus_config.aspnet_env }}
 
 MAW_API_KestrelPfxFile={{ mawus_config.pfx_api }}
 
