--- a/roles/mikeandwan_us/templates/maw_env/maw-auth.env.j2
+++ b/roles/mikeandwan_us/templates/maw_env/maw-auth.env.j2
@@ -1,4 +1,4 @@
-ASPNETCORE_ENVIRONMENT={% if mawus_config.env == 'prod' %}production{% else %}development{% endif %}
+ASPNETCORE_ENVIRONMENT={{ mawus_config.aspnet_env }}
 
 MAW_AUTH_DataProtection__Path={% if mawus_config.env == 'dev' %}{{ mawus_config.dataprotection_dir }}{% else %}/dataprotection{% endif %}
 
