prepare for prod env - improve variable naming and usage - improve copying files to podman volumes on remote machines

--- a/roles/mikeandwan_us/templates/admin_scripts/idsrvsql.sh.j2
+++ b/roles/mikeandwan_us/templates/admin_scripts/idsrvsql.sh.j2
@@ -1,2 +1,2 @@
 #!/bin/bash
-podman run -it --rm --pod {{ mawus_podname }} --env-file {{ env_file_dir }}/maw-postgres.env postgres:{{ postgres_version }} psql -h localhost -U postgres -d idsrv
+podman run -it --rm --pod {{ mawus_config.podman_podname }} --env-file {{ mawus_config.podman_env_dir }}/maw-postgres.env postgres:{{ mawus_config.version_postgres }} psql -h localhost -U postgres -d idsrv
