--- a/roles/postgres_optimize/templates/postgres_optimize.service.j2
+++ b/roles/postgres_optimize/templates/postgres_optimize.service.j2
@@ -3,4 +3,4 @@ Description=PostgreSQL optimizer job for {{ pg_optimize_ctx.db_name }} database
 
 [Service]
 Type=oneshot
-ExecStart=podman run -it --rm --pod {{ pg_optimize_ctx.pod_name }} --env-file {{ pg_optimize_ctx.env_file }} docker.io/postgres:{{ pg_optimize_ctx.postgres_version }} vacuumdb -h localhost -U postgres --dbname {{ pg_optimize_ctx.db_name }} --analyze
+ExecStart=podman run -it --rm --pod {{ pg_optimize_ctx.pod_name }} --env-file {{ pg_optimize_ctx.env_file }} {{ pg_optimize_ctx.container_image }} vacuumdb -h localhost -U postgres --dbname {{ pg_optimize_ctx.db_name }} --analyze
