--- a/roles/certbot_renew/templates/certbot-renew.timer.j2
+++ b/roles/certbot_renew/templates/certbot-renew.timer.j2
@@ -2,7 +2,7 @@
 Description=certbot_renew timer
 
 [Timer]
-OnCalendar={{ certbot_ctx.calendar }}
+OnCalendar={{ cb__calendar }}
 RandomizedDelaySec=1h
 
 [Install]
