update variable conventions for ddclient role

--- a/roles/ddclient/templates/ddclient.conf.j2
+++ b/roles/ddclient/templates/ddclient.conf.j2
@@ -17,5 +17,5 @@ web=ifconfig.me/ip
 protocol=namecheap
 server=dynamicdns.park-your-domain.com
 login=mikeandwan.us
-password={{ ddclient_config.namecheap_password }}
+password={{ dd__namecheap_password }}
 www,@,api,auth,photos,files
