--- a/roles/postgres_backup_cleanup/templates/postgres_backup_cleanup.timer.j2
+++ b/roles/postgres_backup_cleanup/templates/postgres_backup_cleanup.timer.j2
@@ -2,7 +2,7 @@
 Description=Run delete old postgres backups
 
 [Timer]
-OnCalendar={{ pg_cleanup_ctx.calendar }}
+OnCalendar={{ pg_clean__calendar }}
 
 [Install]
 WantedBy=timers.target
