--- a/roles/postgres_backup_database/templates/postgres_backup_database.timer.j2
+++ b/roles/postgres_backup_database/templates/postgres_backup_database.timer.j2
@@ -1,8 +1,8 @@
 [Unit]
-Description=Run postgres backup for database {{ pg_backupdb_ctx.db_name }}
+Description=Run postgres backup for database {{ pg_bu_db__db }}
 
 [Timer]
-OnCalendar={{ pg_backupdb_ctx.calendar }}
+OnCalendar={{ pg_bu_db__calendar }}
 
 [Install]
 WantedBy=timers.target
