update vars for postgres_optimize role

--- a/roles/postgres_optimize/templates/postgres_optimize.service.j2
+++ b/roles/postgres_optimize/templates/postgres_optimize.service.j2
@@ -1,6 +1,6 @@
 [Unit]
-Description=PostgreSQL optimizer job for {{ pg_optimize_ctx.db_name }} database
+Description=PostgreSQL optimizer job for {{ pg_optimize__db }} database
 
 [Service]
 Type=oneshot
-ExecStart=podman run -it --rm --pod {{ pg_optimize_ctx.pod_name }} --env-file {{ pg_optimize_ctx.env_file }} {{ pg_optimize_ctx.container_image }} vacuumdb -h localhost -U postgres --dbname {{ pg_optimize_ctx.db_name }} --analyze
+ExecStart=podman run -it --rm --pod {{ pg_optimize__pod }} --env-file {{ pg_optimize__envfile }} {{ pg_optimize__postgres_image }} vacuumdb -h localhost -U postgres --dbname {{ pg_optimize__db }} --analyze
