--- a/roles/postgres_optimize/templates/postgres_optimize.timer.j2
+++ b/roles/postgres_optimize/templates/postgres_optimize.timer.j2
@@ -1,8 +1,8 @@
 [Unit]
-Description=Run vacuumdb with analyze for database {{ pg_optimize_ctx.db_name }}
+Description=Run vacuumdb with analyze for database {{ pg_optimize__db }}
 
 [Timer]
-OnCalendar={{ pg_optimize_ctx.calendar }}
+OnCalendar={{ pg_optimize__calendar }}
 
 [Install]
 WantedBy=timers.target
