update vars for reverse geocode role

--- a/roles/reverse_geocoder/templates/reverse-geocode.service.j2
+++ b/roles/reverse_geocoder/templates/reverse-geocode.service.j2
@@ -3,4 +3,4 @@ Description=Reverse Geocode job for mikeandwan.us
 
 [Service]
 Type=oneshot
-ExecStart=podman run -it --rm --pull always --pod {{ reverse_geocode_ctx.pod_name }} --volume {{ reverse_geocode_ctx.volume_name }}:/results:rw,z --env-file {{ reverse_geocode_ctx.env_file }} {{ reverse_geocode_ctx.container_image }}
+ExecStart=podman run -it --rm --pull always --pod {{ rev_geo__pod }} --volume {{ rev_geo__volume }}:/results:rw,z --env-file {{ rev_geo__envfile }} {{ rev_geo__image }}
