--- a/roles/reverse_geocoder/templates/reverse-geocode.timer.j2
+++ b/roles/reverse_geocoder/templates/reverse-geocode.timer.j2
@@ -2,7 +2,7 @@
 Description=Reverse Geocode Timer
 
 [Timer]
-OnCalendar={{ reverse_geocode_ctx.calendar }}
+OnCalendar={{ rev_geo__calendar }}
 
 [Install]
 WantedBy=timers.target
