--- a/roles/mikeandwan_us/templates/maw_env/maw-auth.env.j2
+++ b/roles/mikeandwan_us/templates/maw_env/maw-auth.env.j2
@@ -4,7 +4,7 @@ GOOGLE_APPLICATION_CREDENTIALS={{ mawus_config.google_email_creds_file }}
 MAW_AUTH_Kestrel__Certificates__Default__Path={{ mawus_config.pfx_auth }}
 MAW_AUTH_Kestrel__Certificates__Default__Password={{ mawus_config_pfx_pwd_updates.pfx_pwd_auth }}
 
-MAW_AUTH_DataProtection__Path={% if mawus_config.env == 'dev' %}{{ mawus_config.dataprotection_dir }}{% else %}/dataprotection{% endif %}
+MAW_AUTH_DataProtection__Path={% if mawus__env == 'dev' %}{{ mawus_config.dataprotection_dir }}{% else %}/dataprotection{% endif %}
 
 MAW_AUTH_Environment__DbConnectionString=Server=127.0.0.1;Port=5432;Database=maw_website;Max Auto Prepare=100;User Id={{ mawus_config.sql_username }};Password={{ mawus_config.sql_password }}
 MAW_AUTH_Environment__IdsrvDbConnectionString=Server=127.0.0.1;Port=5432;Database=idsrv;Max Auto Prepare=100;User Id={{ mawus_config.sql_username }};Password={{ mawus_config.sql_password }}
