--- a/roles/mikeandwan_us/templates/maw_env/maw-www.env.j2
+++ b/roles/mikeandwan_us/templates/maw_env/maw-www.env.j2
@@ -9,7 +9,7 @@ MAW_WWW_Environment__DbConnectionString=Server=127.0.0.1;Port=5432;Database=maw_
 MAW_WWW_AuthConfig__ClientId={{ mawus_config.www_auth_client_id }}
 MAW_WWW_AuthConfig__Secret={{ mawus_config.www_auth_client_secret }}
 
-MAW_WWW_DataProtection__Path={% if mawus_config.env == 'dev' %}{{ mawus_config.dataprotection_dir }}{% else %}/dataprotection{% endif %}
+MAW_WWW_DataProtection__Path={% if mawus__env == 'dev' %}{{ mawus_config.dataprotection_dir }}{% else %}/dataprotection{% endif %}
 
 MAW_WWW_GoogleRecaptcha__SiteKey={{ mawus_config.google_recaptcha_site_key }}
 MAW_WWW_GoogleRecaptcha__SecretKey={{ mawus_config.google_recaptcha_secret_key }}
