update aspnet_env var

--- a/roles/mikeandwan_us/templates/maw_env/maw-www.env.j2
+++ b/roles/mikeandwan_us/templates/maw_env/maw-www.env.j2
@@ -1,4 +1,4 @@
-ASPNETCORE_ENVIRONMENT={{ mawus_config.aspnet_env }}
+ASPNETCORE_ENVIRONMENT={{ mawus__aspnet_env }}
 GOOGLE_APPLICATION_CREDENTIALS={{ mawus_config.google_email_creds_file }}
 
 MAW_WWW_Kestrel__Certificates__Default__Path={{ mawus_config.pfx_www }}
