--- a/roles/mikeandwan_us/templates/maw_env/maw-api.env.j2
+++ b/roles/mikeandwan_us/templates/maw_env/maw-api.env.j2
@@ -1,4 +1,4 @@
-ASPNETCORE_ENVIRONMENT={{ mawus_config.aspnet_env }}
+ASPNETCORE_ENVIRONMENT={{ mawus__aspnet_env }}
 
 MAW_API_Kestrel__Certificates__Default__Path={{ mawus_config.pfx_api }}
 MAW_API_Kestrel__Certificates__Default__Password={{ mawus_config_pfx_pwd_updates.pfx_pwd_api }}
