--- a/roles/mikeandwan_us/templates/maw_env/maw-auth.env.j2
+++ b/roles/mikeandwan_us/templates/maw_env/maw-auth.env.j2
@@ -1,7 +1,7 @@
 ASPNETCORE_ENVIRONMENT={{ mawus__aspnet_env }}
 GOOGLE_APPLICATION_CREDENTIALS={{ mawus_config.google_email_creds_file }}
 
-MAW_AUTH_Kestrel__Certificates__Default__Path={{ mawus_config.pfx_auth }}
+MAW_AUTH_Kestrel__Certificates__Default__Path={{ mawus__pfx_auth }}
 MAW_AUTH_Kestrel__Certificates__Default__Password={{ mawus_config_pfx_pwd_updates.pfx_pwd_auth }}
 
 MAW_AUTH_DataProtection__Path={% if mawus__env == 'dev' %}{{ mawus_config.dataprotection_dir }}{% else %}/dataprotection{% endif %}
@@ -22,4 +22,4 @@ MAW_AUTH_Microsoft__Secret={{ mawus_config.microsoft_client_secret }}
 MAW_AUTH_GitHub__ClientId={{ mawus_config.github_client_id }}
 MAW_AUTH_GitHub__ClientSecret={{ mawus_config.github_client_secret }}
 
-MAW_AUTH_SigningCertDir={{ mawus_config.pfx_signing | dirname }}
+MAW_AUTH_SigningCertDir={{ mawus__pfx_signing | dirname }}
