update google creds vars

--- a/roles/mikeandwan_us/templates/maw_env/maw-auth.env.j2
+++ b/roles/mikeandwan_us/templates/maw_env/maw-auth.env.j2
@@ -1,5 +1,5 @@
 ASPNETCORE_ENVIRONMENT={{ mawus__aspnet_env }}
-GOOGLE_APPLICATION_CREDENTIALS={{ mawus_config.google_email_creds_file }}
+GOOGLE_APPLICATION_CREDENTIALS={{ mawus__google_email_creds_file }}
 
 MAW_AUTH_Kestrel__Certificates__Default__Path={{ mawus__pfx_auth }}
 MAW_AUTH_Kestrel__Certificates__Default__Password={{ mawus_config_pfx_pwd_updates.pfx_pwd_auth }}
