--- a/roles/mikeandwan_us/templates/maw_env/maw-api.env.j2
+++ b/roles/mikeandwan_us/templates/maw_env/maw-api.env.j2
@@ -3,8 +3,8 @@ ASPNETCORE_ENVIRONMENT={{ mawus__aspnet_env }}
 MAW_API_Kestrel__Certificates__Default__Path={{ mawus__pfx_api }}
 MAW_API_Kestrel__Certificates__Default__Password={{ mawus_config_pfx_pwd_updates.pfx_pwd_api }}
 
-MAW_API_DataProtection__Path={% if mawus__env == 'dev' %}{{ mawus_config.dataprotection_dir }}{% else %}/dataprotection{% endif %}
+MAW_API_DataProtection__Path={% if mawus__env == 'dev' %}{{ mawus__dataprotection_dir }}{% else %}/dataprotection{% endif %}
 
 MAW_API_Environment__DbConnectionString=Server=127.0.0.1;Port=5432;Database=maw_website;Max Auto Prepare=100;User Id={{ mawus_config.sql_username }};Password={{ mawus_config.sql_password }}
 
-MAW_API_FileUpload__RootDirectory={{ mawus_config.upload_dir }}
+MAW_API_FileUpload__RootDirectory={{ mawus__upload_dir }}
