finish renaming mawus vars

--- a/roles/mikeandwan_us/templates/maw_env/maw-api.env.j2
+++ b/roles/mikeandwan_us/templates/maw_env/maw-api.env.j2
@@ -5,6 +5,6 @@ MAW_API_Kestrel__Certificates__Default__Password={{ mawus_config_pfx_pwd_updates
 
 MAW_API_DataProtection__Path={% if mawus__env == 'dev' %}{{ mawus__dataprotection_dir }}{% else %}/dataprotection{% endif %}
 
-MAW_API_Environment__DbConnectionString=Server=127.0.0.1;Port=5432;Database=maw_website;Max Auto Prepare=100;User Id={{ mawus_config.sql_username }};Password={{ mawus_config.sql_password }}
+MAW_API_Environment__DbConnectionString=Server=127.0.0.1;Port=5432;Database=maw_website;Max Auto Prepare=100;User Id={{ mawus__sql_username }};Password={{ mawus__sql_password }}
 
 MAW_API_FileUpload__RootDirectory={{ mawus__upload_dir }}
