--- a/roles/mikeandwan_us/templates/maw_env/maw-cache-sync.env.j2
+++ b/roles/mikeandwan_us/templates/maw_env/maw-cache-sync.env.j2
@@ -1,2 +1,2 @@
-MAW_WORKER_DB_CONNECTION_STRING=Server=127.0.0.1;Port=5432;Database=maw_website;Max Auto Prepare=100;User Id={{ mawus_config.sql_username }};Password={{ mawus_config.sql_password }}
+MAW_WORKER_DB_CONNECTION_STRING=Server=127.0.0.1;Port=5432;Database=maw_website;Max Auto Prepare=100;User Id={{ mawus__sql_username }};Password={{ mawus__sql_password }}
 MAW_WORKER_REDIS_CONNECTION_STRING=localhost,abortConnect=false
