--- a/roles/mikeandwan_us/templates/maw_env/maw-auth.env.j2
+++ b/roles/mikeandwan_us/templates/maw_env/maw-auth.env.j2
@@ -6,20 +6,20 @@ MAW_AUTH_Kestrel__Certificates__Default__Password={{ mawus_config_pfx_pwd_update
 
 MAW_AUTH_DataProtection__Path={% if mawus__env == 'dev' %}{{ mawus__dataprotection_dir }}{% else %}/dataprotection{% endif %}
 
-MAW_AUTH_Environment__DbConnectionString=Server=127.0.0.1;Port=5432;Database=maw_website;Max Auto Prepare=100;User Id={{ mawus_config.sql_username }};Password={{ mawus_config.sql_password }}
-MAW_AUTH_Environment__IdsrvDbConnectionString=Server=127.0.0.1;Port=5432;Database=idsrv;Max Auto Prepare=100;User Id={{ mawus_config.sql_username }};Password={{ mawus_config.sql_password }}
-MAW_AUTH_Environment__WwwClientSecret={{ mawus_config.www_auth_client_secret }}
+MAW_AUTH_Environment__DbConnectionString=Server=127.0.0.1;Port=5432;Database=maw_website;Max Auto Prepare=100;User Id={{ mawus__sql_username }};Password={{ mawus__sql_password }}
+MAW_AUTH_Environment__IdsrvDbConnectionString=Server=127.0.0.1;Port=5432;Database=idsrv;Max Auto Prepare=100;User Id={{ mawus__sql_username }};Password={{ mawus__sql_password }}
+MAW_AUTH_Environment__WwwClientSecret={{ mawus__www_auth_client_secret }}
 
-MAW_AUTH_GooglePlus__ClientId={{ mawus_config.google_plus_client_id }}
-MAW_AUTH_GooglePlus__ClientSecret={{ mawus_config.google_plus_client_secret }}
+MAW_AUTH_GooglePlus__ClientId={{ mawus__google_plus_client_id }}
+MAW_AUTH_GooglePlus__ClientSecret={{ mawus__google_plus_client_secret }}
 
-MAW_AUTH_Twitter__ConsumerKey={{ mawus_config.twitter_client_id }}
-MAW_AUTH_Twitter__ConsumerSecret={{ mawus_config.twitter_client_secret }}
+MAW_AUTH_Twitter__ConsumerKey={{ mawus__twitter_client_id }}
+MAW_AUTH_Twitter__ConsumerSecret={{ mawus__twitter_client_secret }}
 
-MAW_AUTH_Microsoft__ApplicationId={{ mawus_config.microsoft_client_id }}
-MAW_AUTH_Microsoft__Secret={{ mawus_config.microsoft_client_secret }}
+MAW_AUTH_Microsoft__ApplicationId={{ mawus__microsoft_client_id }}
+MAW_AUTH_Microsoft__Secret={{ mawus__microsoft_client_secret }}
 
-MAW_AUTH_GitHub__ClientId={{ mawus_config.github_client_id }}
-MAW_AUTH_GitHub__ClientSecret={{ mawus_config.github_client_secret }}
+MAW_AUTH_GitHub__ClientId={{ mawus__github_client_id }}
+MAW_AUTH_GitHub__ClientSecret={{ mawus__github_client_secret }}
 
 MAW_AUTH_SigningCertDir={{ mawus__pfx_signing | dirname }}
