--- a/roles/mikeandwan_us/templates/maw_env/maw-postgres.env.j2
+++ b/roles/mikeandwan_us/templates/maw_env/maw-postgres.env.j2
@@ -1,8 +1,8 @@
 # set the postgres password when initializing the container w/ blank db
-POSTGRES_PASSWORD={{ mawus_config.sql_postgres_password }}
+POSTGRES_PASSWORD={{ mawus__sql_postgres_password }}
 
 # set the pwd for use in client tooling
-PGPASSWORD={{ mawus_config.sql_postgres_password }}
+PGPASSWORD={{ mawus__sql_postgres_password }}
 
 # set the catchall host method in pg_hba.conf (used when first creating container/config)
 POSTGRES_HOST_AUTH_METHOD=scram-sha-256
