--- a/roles/mikeandwan_us/templates/maw_env/maw-www.env.j2
+++ b/roles/mikeandwan_us/templates/maw_env/maw-www.env.j2
@@ -4,12 +4,12 @@ GOOGLE_APPLICATION_CREDENTIALS={{ mawus__google_email_creds_file }}
 MAW_WWW_Kestrel__Certificates__Default__Path={{ mawus__pfx_www }}
 MAW_WWW_Kestrel__Certificates__Default__Password={{ mawus_config_pfx_pwd_updates.pfx_pwd_www }}
 
-MAW_WWW_Environment__DbConnectionString=Server=127.0.0.1;Port=5432;Database=maw_website;Max Auto Prepare=100;User Id={{ mawus_config.sql_username }};Password={{ mawus_config.sql_password }}
+MAW_WWW_Environment__DbConnectionString=Server=127.0.0.1;Port=5432;Database=maw_website;Max Auto Prepare=100;User Id={{ mawus__sql_username }};Password={{ mawus__sql_password }}
 
-MAW_WWW_AuthConfig__ClientId={{ mawus_config.www_auth_client_id }}
-MAW_WWW_AuthConfig__Secret={{ mawus_config.www_auth_client_secret }}
+MAW_WWW_AuthConfig__ClientId={{ mawus__www_auth_client_id }}
+MAW_WWW_AuthConfig__Secret={{ mawus__www_auth_client_secret }}
 
 MAW_WWW_DataProtection__Path={% if mawus__env == 'dev' %}{{ mawus__dataprotection_dir }}{% else %}/dataprotection{% endif %}
 
-MAW_WWW_GoogleRecaptcha__SiteKey={{ mawus_config.google_recaptcha_site_key }}
-MAW_WWW_GoogleRecaptcha__SecretKey={{ mawus_config.google_recaptcha_secret_key }}
+MAW_WWW_GoogleRecaptcha__SiteKey={{ mawus__google_recaptcha_site_key }}
+MAW_WWW_GoogleRecaptcha__SecretKey={{ mawus__google_recaptcha_secret_key }}
