try to cleanup remaining variable references

--- a/roles/mikeandwan_us/templates/maw_env/maw-auth.env.j2
+++ b/roles/mikeandwan_us/templates/maw_env/maw-auth.env.j2
@@ -2,7 +2,7 @@ ASPNETCORE_ENVIRONMENT={{ mawus__aspnet_env }}
 GOOGLE_APPLICATION_CREDENTIALS={{ mawus__google_email_creds_file }}
 
 MAW_AUTH_Kestrel__Certificates__Default__Path={{ mawus__pfx_auth }}
-MAW_AUTH_Kestrel__Certificates__Default__Password={{ mawus_config_pfx_pwd_updates.pfx_pwd_auth }}
+MAW_AUTH_Kestrel__Certificates__Default__Password={{ mawus__pfx_pwd_auth }}
 
 MAW_AUTH_DataProtection__Path={% if mawus__env == 'dev' %}{{ mawus__dataprotection_dir }}{% else %}/dataprotection{% endif %}
 
