--- a/roles/mikeandwan_us/templates/maw_env/maw-www.env.j2
+++ b/roles/mikeandwan_us/templates/maw_env/maw-www.env.j2
@@ -2,7 +2,7 @@ ASPNETCORE_ENVIRONMENT={{ mawus__aspnet_env }}
 GOOGLE_APPLICATION_CREDENTIALS={{ mawus__google_email_creds_file }}
 
 MAW_WWW_Kestrel__Certificates__Default__Path={{ mawus__pfx_www }}
-MAW_WWW_Kestrel__Certificates__Default__Password={{ mawus_config_pfx_pwd_updates.pfx_pwd_www }}
+MAW_WWW_Kestrel__Certificates__Default__Password={{ mawus__pfx_pwd_www }}
 
 MAW_WWW_Environment__DbConnectionString=Server=127.0.0.1;Port=5432;Database=maw_website;Max Auto Prepare=100;User Id={{ mawus__sql_username }};Password={{ mawus__sql_password }}
 
