--- a/roles/mikeandwan_us/templates/maw_env/maw-api.env.j2
+++ b/roles/mikeandwan_us/templates/maw_env/maw-api.env.j2
@@ -1,7 +1,7 @@
 ASPNETCORE_ENVIRONMENT={{ mawus__aspnet_env }}
 
 MAW_API_Kestrel__Certificates__Default__Path={{ mawus__pfx_api }}
-MAW_API_Kestrel__Certificates__Default__Password={{ mawus_config_pfx_pwd_updates.pfx_pwd_api }}
+MAW_API_Kestrel__Certificates__Default__Password={{ mawus__pfx_pwd_api }}
 
 MAW_API_DataProtection__Path={% if mawus__env == 'dev' %}{{ mawus__dataprotection_dir }}{% else %}/dataprotection{% endif %}
 
