--- a/roles/mikeandwan_us/templates/maw_env/maw-reverse-geocode.env.j2
+++ b/roles/mikeandwan_us/templates/maw_env/maw-reverse-geocode.env.j2
@@ -1,2 +1,2 @@
-DB_CONN=Server=127.0.0.1;Port=5432;Database=maw_website;User Id={{ mawus__sql_username }};Password={{ mawus__sql_password }}
-API_KEY={{ mawus__google_api_key }}
+DB_CONN=Server=127.0.0.1;Port=5432;Database=maw_website;User Id={{ maw__sql_username }};Password={{ maw__sql_password }}
+API_KEY={{ maw__google_api_key }}
