update api var names

--- a/roles/maw_api/templates/maw-api.env.j2
+++ b/roles/maw_api/templates/maw-api.env.j2
@@ -1,10 +1,10 @@
-ASPNETCORE_ENVIRONMENT={{ mawus_api__aspnet_env }}
+ASPNETCORE_ENVIRONMENT={{ maw_api__aspnet_env }}
 
-MAW_API_Kestrel__Certificates__Default__Path={{ mawus_api__pfx }}
-MAW_API_Kestrel__Certificates__Default__Password={{ mawus_api__pfx_pwd }}
+MAW_API_Kestrel__Certificates__Default__Path={{ maw_api__pfx }}
+MAW_API_Kestrel__Certificates__Default__Password={{ maw_api__pfx_pwd }}
 
-MAW_API_DataProtection__Path={% if mawus_api__dataprotection_dir | length > 0 %}{{ mawus_api__dataprotection_dir }}{% else %}/dataprotection{% endif %}
+MAW_API_DataProtection__Path={% if maw_api__dataprotection_dir | length > 0 %}{{ maw_api__dataprotection_dir }}{% else %}/dataprotection{% endif %}
 
-MAW_API_Environment__DbConnectionString=Server=127.0.0.1;Port=5432;Database=maw_website;Max Auto Prepare=100;User Id={{ mawus_api__sql_username }};Password={{ mawus_api__sql_password }}
+MAW_API_Environment__DbConnectionString=Server=127.0.0.1;Port=5432;Database=maw_website;Max Auto Prepare=100;User Id={{ maw_api__sql_username }};Password={{ maw_api__sql_password }}
 
-MAW_API_FileUpload__RootDirectory={{ mawus_api__upload_dir }}
+MAW_API_FileUpload__RootDirectory={{ maw_api__upload_dir }}
