--- a/roles/maw_www/templates/maw-www.env.j2
+++ b/roles/maw_www/templates/maw-www.env.j2
@@ -1,15 +1,15 @@
-ASPNETCORE_ENVIRONMENT={{ mawus_www__aspnet_env }}
-GOOGLE_APPLICATION_CREDENTIALS={{ mawus_www__google_email_creds_file }}
+ASPNETCORE_ENVIRONMENT={{ maw_www__aspnet_env }}
+GOOGLE_APPLICATION_CREDENTIALS={{ maw_www__google_email_creds_file }}
 
-MAW_WWW_Kestrel__Certificates__Default__Path={{ mawus_www__pfx }}
-MAW_WWW_Kestrel__Certificates__Default__Password={{ mawus_www__pfx_pwd }}
+MAW_WWW_Kestrel__Certificates__Default__Path={{ maw_www__pfx }}
+MAW_WWW_Kestrel__Certificates__Default__Password={{ maw_www__pfx_pwd }}
 
-MAW_WWW_Environment__DbConnectionString=Server=127.0.0.1;Port=5432;Database=maw_website;Max Auto Prepare=100;User Id={{ mawus_www__sql_username }};Password={{ mawus_www__sql_password }}
+MAW_WWW_Environment__DbConnectionString=Server=127.0.0.1;Port=5432;Database=maw_website;Max Auto Prepare=100;User Id={{ maw_www__sql_username }};Password={{ maw_www__sql_password }}
 
-MAW_WWW_AuthConfig__ClientId={{ mawus_www__auth_client_id }}
-MAW_WWW_AuthConfig__Secret={{ mawus_www__auth_client_secret }}
+MAW_WWW_AuthConfig__ClientId={{ maw_www__auth_client_id }}
+MAW_WWW_AuthConfig__Secret={{ maw_www__auth_client_secret }}
 
-MAW_WWW_DataProtection__Path={% if mawus_www__dataprotection_dir | length > 0 %}{{ mawus_www__dataprotection_dir }}{% else %}/dataprotection{% endif %}
+MAW_WWW_DataProtection__Path={% if maw_www__dataprotection_dir | length > 0 %}{{ maw_www__dataprotection_dir }}{% else %}/dataprotection{% endif %}
 
-MAW_WWW_GoogleRecaptcha__SiteKey={{ mawus_www__google_recaptcha_site_key }}
-MAW_WWW_GoogleRecaptcha__SecretKey={{ mawus_www__google_recaptcha_secret_key }}
+MAW_WWW_GoogleRecaptcha__SiteKey={{ maw_www__google_recaptcha_site_key }}
+MAW_WWW_GoogleRecaptcha__SecretKey={{ maw_www__google_recaptcha_secret_key }}
