consolidate reverse geocoder role

--- a/roles/maw_reverse_geocoder/templates/reverse-geocode.timer.j2
+++ b/roles/maw_reverse_geocoder/templates/reverse-geocode.timer.j2
@@ -2,7 +2,7 @@
 Description=Reverse Geocode Timer
 
 [Timer]
-OnCalendar={{ rev_geo__calendar }}
+OnCalendar={{ maw_revgeo__calendar }}
 
 [Install]
 WantedBy=timers.target
