rename maw_solr_indexer role

--- a/roles/maw_solr_indexer/templates/solr-indexer.timer.j2
+++ b/roles/maw_solr_indexer/templates/solr-indexer.timer.j2
@@ -2,7 +2,7 @@
 Description=Run solr-indexer once a day
 
 [Timer]
-OnCalendar={{ solr_idx__calendar }}
+OnCalendar={{ maw_solridx__calendar }}
 
 [Install]
 WantedBy=timers.target
